// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource tests create a chart with stacked bar 1`] = `
{
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "barPercentage": 0.9,
          "borderColor": "#FFFFFF",
          "borderRadius": 2,
          "borderWidth": 1,
          "categoryPercentage": 1,
          "data": [
            30,
          ],
          "hidden": false,
          "label": "P4",
          "xAxisID": "x",
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [
        "mousemove",
        "mouseout",
        "click",
        "touchstart",
        "touchmove",
        "mouseup",
      ],
      "indexAxis": "x",
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 15,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "background": {
          "color": undefined,
        },
        "chartShowValuesPlugin": {
          "background": [Function],
          "callback": [Function],
          "horizontal": undefined,
          "showValues": false,
          "type": "bar",
        },
        "legend": {
          "display": true,
          "labels": {
            "color": "#000000",
            "filter": [Function],
            "generateLabels": [Function],
            "usePointStyle": true,
          },
          "onClick": [Function],
          "onHover": [Function],
          "onLeave": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#666666",
          "display": true,
          "font": {
            "size": 16,
            "style": "normal",
            "weight": "normal",
          },
          "padding": {
            "bottom": 0,
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "beforeLabel": [Function],
            "label": [Function],
            "title": [Function],
          },
          "enabled": false,
          "external": [Function],
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": true,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": true,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "type": "bar",
  },
  "masterChartConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "barPercentage": 0.9,
          "borderColor": "#FFFFFF",
          "borderRadius": 2,
          "borderWidth": 1,
          "categoryPercentage": 1,
          "data": [
            30,
          ],
          "hidden": false,
          "label": "P4",
          "pointRadius": 0,
          "xAxisID": "x",
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P4",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [
        "mousemove",
        "mouseout",
        "click",
        "touchstart",
        "touchmove",
        "mouseup",
      ],
      "hover": {
        "mode": null,
      },
      "indexAxis": "x",
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 5,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "background": {
          "color": undefined,
        },
        "chartShowValuesPlugin": undefined,
        "legend": {
          "display": false,
        },
        "title": {
          "display": false,
        },
        "tooltip": {
          "enabled": false,
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": true,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
            "font": {
              "size": 9,
            },
            "padding": 0,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "display": false,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": true,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
        "y1": {
          "display": false,
        },
      },
    },
    "type": "bar",
  },
}
`;

exports[`datasource tests create chart with column datasets 1`] = `
{
  "chartJsConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "hidden": false,
          "label": "first column dataset",
          "pointBackgroundColor": "#4EA7F2",
          "pointRadius": 3,
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "hidden": false,
          "label": "second column dataset",
          "pointBackgroundColor": "#EA6175",
          "pointRadius": 3,
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [
        "mousemove",
        "mouseout",
        "click",
        "touchstart",
        "touchmove",
        "mouseup",
      ],
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 15,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "background": {
          "color": undefined,
        },
        "chartShowValuesPlugin": {
          "background": [Function],
          "callback": [Function],
          "horizontal": false,
          "showValues": false,
          "type": "line",
        },
        "legend": {
          "display": true,
          "labels": {
            "color": "#000000",
            "filter": [Function],
            "generateLabels": [Function],
            "usePointStyle": true,
          },
          "onClick": [Function],
          "onHover": [Function],
          "onLeave": [Function],
          "position": "top",
        },
        "title": {
          "align": "start",
          "color": "#666666",
          "display": true,
          "font": {
            "size": 16,
            "style": "normal",
            "weight": "normal",
          },
          "padding": {
            "bottom": 0,
          },
          "text": "test",
        },
        "tooltip": {
          "callbacks": {
            "beforeLabel": [Function],
            "label": [Function],
            "title": [Function],
          },
          "enabled": false,
          "external": [Function],
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
            "padding": 5,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
      },
    },
    "type": "line",
  },
  "masterChartConfig": {
    "data": {
      "datasets": [
        {
          "backgroundColor": "#4EA7F2",
          "borderColor": "#4EA7F2",
          "data": [
            10,
            11,
            12,
          ],
          "fill": false,
          "hidden": false,
          "label": "first column dataset",
          "pointBackgroundColor": "#4EA7F2",
          "pointRadius": 0,
          "tension": 0,
          "yAxisID": "y",
        },
        {
          "backgroundColor": "#EA6175",
          "borderColor": "#EA6175",
          "data": [
            20,
            19,
            18,
          ],
          "fill": false,
          "hidden": false,
          "label": "second column dataset",
          "pointBackgroundColor": "#EA6175",
          "pointRadius": 0,
          "tension": 0,
          "yAxisID": "y",
        },
      ],
      "labels": [
        "P1",
        "P2",
        "P3",
      ],
    },
    "options": {
      "animation": false,
      "elements": {
        "line": {
          "fill": false,
        },
        "point": {
          "hitRadius": 15,
        },
      },
      "events": [
        "mousemove",
        "mouseout",
        "click",
        "touchstart",
        "touchmove",
        "mouseup",
      ],
      "hover": {
        "mode": null,
      },
      "layout": {
        "padding": {
          "bottom": 10,
          "left": 20,
          "right": 20,
          "top": 5,
        },
      },
      "maintainAspectRatio": false,
      "plugins": {
        "background": {
          "color": undefined,
        },
        "chartShowValuesPlugin": undefined,
        "legend": {
          "display": false,
        },
        "title": {
          "display": false,
        },
        "tooltip": {
          "enabled": false,
        },
      },
      "responsive": true,
      "scales": {
        "x": {
          "grid": {
            "display": false,
          },
          "stacked": undefined,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
            "font": {
              "size": 9,
            },
            "padding": 0,
          },
          "title": undefined,
        },
        "y": {
          "beginAtZero": true,
          "display": false,
          "grid": {
            "display": true,
          },
          "position": "left",
          "stacked": false,
          "ticks": {
            "callback": [Function],
            "color": "#000000",
          },
          "title": undefined,
        },
        "y1": {
          "display": false,
        },
      },
    },
    "type": "line",
  },
}
`;
